Change config for docs site

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Renewal SA WordPress Template
+description: A starter template for Renewal SA WordPress Sites
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://renewalsa-websites.github.io/wordpress-template/
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Template Repository: https://github.com/renewalsa-websites/wordpress-template
