--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,5 +4,7 @@ theme: just-the-docs
 
 url: https://renewalsa-websites.github.io/wordpress-template/
 
+logo: "/assets/renewalsa-logo.png"
+
 aux_links:
   Template Repository: https://github.com/renewalsa-websites/wordpress-template
