add more plugins to composer and updated docs

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,10 @@
         "wpackagist-plugin/safe-svg": "^2.0",
 
         "renewalsa-plugins/wp-migrate-db-pro": "^2.0",
-        "renewalsa-plugins/advanced-custom-fields-pro": "^6.0.7"
+        "renewalsa-plugins/advanced-custom-fields-pro": "^6.0.7",
+        "wpackagist-plugin/wp-2fa": "^2.6",
+        "renewalsa-plugins/wp-security-audit-log-premium": "^4.6",
+        "wpackagist-plugin/password-bcrypt": "^1.0"
     },
     "extra": {
         "wordpress-install-dir": "site/wordpress",
